Update the button Selection Date (html+js)
Update the button Selection Date (html+js):
*update html for the button Selection Date
*connected the button Selection Date with the Calendar (Select date menu) for correct date throw js.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1>Booking Calendar</h1>
                 </li>
                 <li>
-                    <button href="style.css">Selection Date</button>
+                    <button id="dateButton">Selection Date</button>
                 </li>
                 
             </ul>    
