--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Booking calendar</title>
 
     </head>
-    <body style="margin: 20px;">
+    <body>
 
     <!--Header-->
     <header class="header">
@@ -122,7 +122,7 @@
                         <button>All selected</button>
                     </div>
                 </div>
-                <div>
+                <div class="first_section">
                     <!-- Services button -->
                     <button id="servicesButton" data-dropdown-toggle="servicesSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Services<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -144,7 +144,7 @@
                         </ul>
                     </div>
                 </div>
-                <div>
+                <div class="second_section">
                     <!-- Staff button -->
                     <button id="staffButton" data-dropdown-toggle="staffSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Staff<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -166,7 +166,7 @@
                         </ul>
                     </div>
                 </div>
-                <div>
+                <div class="third_section">
                     <!-- Location button -->
                     <button id="locationButton" data-dropdown-toggle="locationSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Location<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -188,7 +188,7 @@
                         </ul>
                     </div>
                 </div>
-                <div>
+                <div class="fourth_section">
                     <!-- Session Availability button -->
                     <button id="sessionAvailabilityButton" data-dropdown-toggle="sessionAvailabilitySearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Session Availability<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -210,7 +210,7 @@
                         </ul>
                     </div>
                 </div>
-                <div>
+                <div class="fifth_section">
                     <!-- Other Events button -->
                     <button id="otherEventsButton" data-dropdown-toggle="otherEventsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Other Events<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -239,7 +239,7 @@
             <!--Header of the table-->
             <div class="header_of_table">
                 <div class="left">
-                    <button>Count of the Day</button>
+                    <button class="count">Count of the Day</button>
                     <button>right</button>
                     <button>left</button>
                     <p>Count of scheduels of this week</p>
