--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Booking calendar</title>
 
@@ -31,7 +33,8 @@
         <div class="right">
             <ul class="list">
                 <li>
-                    <button href="style.css">Update</button>
+                    <button class="update"></button>
+                    <button class="dots"></button>
                 </li>
                 <li class="right">
                     <!-- Manage button -->
@@ -147,8 +150,8 @@
                 <div class="second_section">
                     <!-- Staff button -->
                     <button id="staffButton" data-dropdown-toggle="staffSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Staff<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-                    </svg>
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                        </svg>
                     </button>
 
                     <!-- Staff menu -->
@@ -240,12 +243,12 @@
             <div class="header_of_table">
                 <div class="left">
                     <button class="count">Count of the Day</button>
-                    <button>right</button>
-                    <button>left</button>
+                    <button class="button_left"></button>
+                    <button class="button_right"></button>
                     <p>Count of scheduels of this week</p>
                 </div>
                 <div class="right">
-                    <button>Icon</button>
+                    <button class="icon"></button>
                     <div>
                         <!-- Weekly view button -->
                         <button id="weeklyViewButton" data-dropdown-toggle="weeklyViewSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">Weekly view<svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -391,10 +394,8 @@
         </div> 
         
         <div class="right_part">
-            <div>
-                <button>list</button>
-                <button>diagramm</button>
-            </div>
+            <button class="list"></button>
+            <button class="diagramm"></button>
         </div>
 
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@9.0.3"></script>
